feat(const): 메뉴 이름으로 객체를 가져올 수 있는 메서드 추가